# swingbuddy

./: README.md  TODO.md  cfg.py  dataa.py  drop.py  form.ui  pyproject.toml  qwid.py  sbw.py  showswing.py  simbuddy.pyproject  swingdb.py  test.py  test_pipes.py  trcc.py  trcqm.py  ui_form.py  util.py  vplayer.py  wlog.py  ws_client.py
lib/: enums.py  imageoverlay.py  migrations.py  swing_loader.py  swingpipe.py  wait_connection_dialog.py
pipes/: a_normalize_x_y.py  hip_middle.py  lwrist_speed.py
spike/: overlay_spike.py  overlay_spike_resize.py  screen_selector_transparent.py  stacked.py
test/: test_find_swing.py  test_video_playback.py
